# rag_sqlite_vec

./: Cargo.toml  README.md
src/: lib.rs
src/embedding/: mod.rs
src/reranker/: mod.rs
src/search/: interface.rs  mod.rs
src/search/lancedb/: mod.rs
tools/onnx_transform/: README.md  embedding.py  pyproject.toml  reranker.py
