[package]
name = "rag_sqlite_vec"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
ndarray = "0.15"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
rust_tokenizers = { version = "8.1.1" }
lancedb = "0.21.3"
arrow-array = "55"
arrow-schema = "55"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
